--- a/labs/lab1/lab1.html
+++ b/labs/lab1/lab1.html
@@ -397,8 +397,15 @@
                         <textarea id="watch_conditions_desc" class="rule-desc" placeholder="조건을 한글로 설명해주세요."
                             onchange="updateRuleBlock('watch_conditions', 'desc', this.value)"></textarea>
 
-                        <div class="rule-header" style="margin-top: 15px;">
-                            <span class="rule-label"><i class="fas fa-code"></i> 파이썬 수식 (Python Expression)</span>
+                        <div class="rule-header"
+                            style="margin-top: 15px; display:flex; align-items:center; justify-content:flex-start; gap:10px;">
+                            <span class="rule-label" style="margin-bottom:0;"><i class="fas fa-code"></i> 파이썬 수식 (Python
+                                Expression)</span>
+                            <button id="watch_conditions_llm_btn" class="add-btn"
+                                style="width:auto; padding:5px 10px; font-size:0.85rem; border:1px solid #ddd; background:white;"
+                                onclick="generateExpression('watch_conditions')">
+                                <i class="fas fa-magic" style="color:#d946ef;"></i> AI 생성
+                            </button>
                         </div>
                         <div class="rule-code-wrapper">
                             <textarea id="watch_conditions_code" class="rule-code"
@@ -416,8 +423,15 @@
                         <textarea id="entry_conditions_desc" class="rule-desc" placeholder="조건을 한글로 설명해주세요."
                             onchange="updateRuleBlock('entry_conditions', 'desc', this.value)"></textarea>
 
-                        <div class="rule-header" style="margin-top: 15px;">
-                            <span class="rule-label"><i class="fas fa-code"></i> 파이썬 수식 (Python Expression)</span>
+                        <div class="rule-header"
+                            style="margin-top: 15px; display:flex; align-items:center; justify-content:flex-start; gap:10px;">
+                            <span class="rule-label" style="margin-bottom:0;"><i class="fas fa-code"></i> 파이썬 수식 (Python
+                                Expression)</span>
+                            <button id="entry_conditions_llm_btn" class="add-btn"
+                                style="width:auto; padding:5px 10px; font-size:0.85rem; border:1px solid #ddd; background:white;"
+                                onclick="generateExpression('entry_conditions')">
+                                <i class="fas fa-magic" style="color:#d946ef;"></i> AI 생성
+                            </button>
                         </div>
                         <div class="rule-code-wrapper">
                             <textarea id="entry_conditions_code" class="rule-code"
@@ -435,8 +449,15 @@
                         <textarea id="exit_conditions_desc" class="rule-desc" placeholder="조건을 한글로 설명해주세요."
                             onchange="updateRuleBlock('exit_conditions', 'desc', this.value)"></textarea>
 
-                        <div class="rule-header" style="margin-top: 15px;">
-                            <span class="rule-label"><i class="fas fa-code"></i> 파이썬 수식 (Python Expression)</span>
+                        <div class="rule-header"
+                            style="margin-top: 15px; display:flex; align-items:center; justify-content:flex-start; gap:10px;">
+                            <span class="rule-label" style="margin-bottom:0;"><i class="fas fa-code"></i> 파이썬 수식 (Python
+                                Expression)</span>
+                            <button id="exit_conditions_llm_btn" class="add-btn"
+                                style="width:auto; padding:5px 10px; font-size:0.85rem; border:1px solid #ddd; background:white;"
+                                onclick="generateExpression('exit_conditions')">
+                                <i class="fas fa-magic" style="color:#d946ef;"></i> AI 생성
+                            </button>
                         </div>
                         <div class="rule-code-wrapper">
                             <textarea id="exit_conditions_code" class="rule-code"
@@ -707,6 +728,45 @@
                 console.error(e);
                 alert('저장 중 오류 발생');
                 document.querySelector('.fab-save').innerHTML = '<i class="fas fa-save"></i>';
+            }
+        }
+
+        // Generate LLM Expression
+        async function generateExpression(section) {
+            const desc = document.getElementById(section + '_desc').value;
+            if (!desc || desc.trim() === '') {
+                alert('먼저 조건 설명을 한글로 입력해주세요.');
+                return;
+            }
+
+            const btn = document.getElementById(section + '_llm_btn');
+            const originalHtml = btn.innerHTML;
+            btn.innerHTML = '<i class="fas fa-spinner fa-spin"></i> 생성 중...';
+            btn.disabled = true;
+
+            try {
+                const res = await fetch('/api/lab1/llm', {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify({ text: desc })
+                });
+
+                const data = await res.json();
+
+                if (data.status === 'ok') {
+                    const codeEl = document.getElementById(section + '_code');
+                    codeEl.value = data.code;
+                    // Trigger change event to save config state
+                    updateRuleBlock(section, 'code', data.code);
+                } else {
+                    alert('생성 실패: ' + data.message);
+                }
+            } catch (e) {
+                console.error(e);
+                alert('요청 중 오류 발생');
+            } finally {
+                btn.innerHTML = originalHtml;
+                btn.disabled = false;
             }
         }
 
