home: 프론트엔드용 app.js 리팩토링(분할) 및 차트 로딩스피너, 전략실험실 버그 조치

--- a/labs/lab1/lab1.html
+++ b/labs/lab1/lab1.html
@@ -347,8 +347,8 @@
         <div style="font-weight: 800; font-size: 1.25rem; color: #1e293b;">Anti-Stock <span
                 style="color: #3b82f6; font-weight: 400;">Sandbox</span></div>
         <nav>
-            <a href="/" style="text-decoration: none; color: #64748b; font-weight: 600; margin-right: 20px;">대시보드</a>
-            <a href="/lab1" style="text-decoration: none; color: #3b82f6; font-weight: 600;">전략실험실</a>
+            <!-- Navigation removed as per user request -->
+            <div style="flex-grow: 1;"></div>
         </nav>
     </header>
 
